--- a/src/app/shared/pages/login/login.page.html
+++ b/src/app/shared/pages/login/login.page.html
@@ -1,9 +1,33 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Iniciar Sesión</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-card style="margin-top: 15vh;">
+    <form style="margin: 3vh !important;">
+      <ion-item lines="full">
+        <ion-label position="floating">Correo</ion-label>
+        <ion-input type="text" required></ion-input>
+      </ion-item>
+
+      <ion-item lines="full">
+        <ion-label position="floating">Contraseña</ion-label>
+        <ion-input type="password" required></ion-input>
+      </ion-item>
+
+      <ion-row>
+        <ion-col>
+          <br>
+          <ion-button type="submit" color="danger" expand="block">Iniciar Sesión</ion-button>
+          <!-- <a [routerLink]="['/forgot-password']" class="small-text">Forgot Password?</a> -->
+        </ion-col>
+      </ion-row>
+    </form>
+  </ion-card>
 
 </ion-content>
