--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
           </ion-menu-toggle>
         </ion-list>
 
+        <ion-button type="submit" color="danger" expand="block" (click)="logOut()">Cerrar Sesión</ion-button>
+
+
         <!-- <ion-list id="labels-list">
           <ion-list-header>Labels</ion-list-header>
 
