--- a/src/app/shared/pages/login/login.page.html
+++ b/src/app/shared/pages/login/login.page.html
@@ -12,18 +12,18 @@
     <form style="margin: 3vh !important;">
       <ion-item lines="full">
         <ion-label position="floating">Correo</ion-label>
-        <ion-input type="text" required></ion-input>
+        <ion-input type="text" #email required></ion-input>
       </ion-item>
 
       <ion-item lines="full">
         <ion-label position="floating">Contraseña</ion-label>
-        <ion-input type="password" required></ion-input>
+        <ion-input type="password" #password required></ion-input>
       </ion-item>
 
       <ion-row>
         <ion-col>
           <br>
-          <ion-button type="submit" color="danger" expand="block">Iniciar Sesión</ion-button>
+          <ion-button type="submit" color="danger" expand="block" (click)="onLogin(email, password)">Iniciar Sesión</ion-button>
           <!-- <a [routerLink]="['/forgot-password']" class="small-text">Forgot Password?</a> -->
         </ion-col>
       </ion-row>
