--- a/src/app/shared/pages/login/login.page.html
+++ b/src/app/shared/pages/login/login.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content no-bounce>
   <ion-card style="margin-top: 15vh;">
     <form style="margin: 3vh !important;">
       <ion-item lines="full">
@@ -23,7 +23,12 @@
       <ion-row>
         <ion-col>
           <br>
-          <ion-button type="submit" color="danger" expand="block" (click)="onLogin(email, password)">Iniciar Sesión</ion-button>
+          <ion-button type="submit" color="danger" expand="block" (click)="onLogin(email, password)"
+
+
+
+
+          >Iniciar Sesión</ion-button>
           <!-- <a [routerLink]="['/forgot-password']" class="small-text">Forgot Password?</a> -->
         </ion-col>
       </ion-row>
