--- a/src/app/shared/pages/donacion/donacion.page.html
+++ b/src/app/shared/pages/donacion/donacion.page.html
@@ -29,7 +29,7 @@
 
       <ion-row>
         <ion-col>
-          <ion-button type="submit" color="danger" expand="block" (click)="newProduct()">Registrarse</ion-button>
+          <ion-button type="submit" color="danger" expand="block" (click)="addProduct(product)">Registrarse</ion-button>
         </ion-col>
       </ion-row>
     </form>
