--- a/src/app/shared/pages/donacion/donacion.page.html
+++ b/src/app/shared/pages/donacion/donacion.page.html
@@ -30,11 +30,8 @@
 
       <ion-row>
         <ion-col>
-<<<<<<< HEAD
-          <ion-button type="submit" color="danger" expand="block" (click)="addProduct(product)">Registrarse</ion-button>
-=======
+          <!-- <ion-button type="submit" color="danger" expand="block" (click)="addProduct(product)">Registrarse</ion-button> -->
           <ion-button type="submit" color="danger" expand="block" (click)="addProduct(product)">Donar</ion-button>
->>>>>>> 2e4293ca3c60fa9f85b5ec45cda5e37fc4be7156
         </ion-col>
       </ion-row>
     </form>
